- Configured MongoDB as EventStore. - Added Kafka for event distribution. - Created UserView for Querying. - Added docker-compose.yml.

--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.axonframework:axon-spring-boot-starter:4.4.2'
+	implementation('org.axonframework:axon-spring-boot-starter:4.4.2'){
+		exclude group: 'org.axonframework', module: 'axon-server-connector'
+	}
+	implementation 'org.axonframework.extensions.mongo:axon-mongo:4.4'
+	implementation 'org.axonframework.extensions.kafka:axon-kafka-spring-boot-starter:4.0-RC3'
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
