--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# Axon Kafka Config
+axon.kafka.client-id=portfolio-manager
+axon.kafka.default-topic=local.event
+axon.kafka.bootstrap-server=localhost:9092
 
+#Publisher
+axon.kafka.publisher.confirmation-mode=transactional
+
+# Producer
+axon.kafka.producer.transaction-id-prefix=portfolio-manager
+axon.kafka.producer.retries=2
+#axon.kafka.producer.event-processor-mode=subscribing
+
+axon.kafka.fetcher.poll-timeout=3000
+
+#Consumer
+axon.kafka.consumer.enable-auto-commit=true
+axon.kafka.consumer.auto-commit-interval=3000
+axon.kafka.consumer.event-processor-mode=tracking
+axon.kafka.consumer.group-id=local.event.consumer-group
+
+axon.kafka.properties.security.protocol=PLAINTEXT
+
+# Mongo
+spring.data.mongodb.authentication-database=portfolioManager
+spring.data.mongodb.database=portfolioManager
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.password=Test
+spring.data.mongodb.username=appUser
